Compiling on Debian, but with problemts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,11 @@ ADD_EXECUTABLE(small3dTest main.cpp)
 
 # Link OpenGL things and set to use C++11
 if(NOT WIN32 OR MINGW)
+  FIND_PACKAGE(OpenGL REQUIRED)
+  INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
+  TARGET_LINK_LIBRARIES(small3d PUBLIC ${OPENGL_LIBRARIES})
   IF(APPLE)
-    FIND_PACKAGE(OpenGL REQUIRED)
-    INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
-    TARGET_LINK_LIBRARIES(small3d PUBLIC ${OPENGL_LIBRARIES})
   ELSE()
     target_compile_options(small3d PUBLIC "-std=c++11" "-Wl,--no-as-needed") # Ubuntu if gcc problems
   ENDIF()
@@ -27,15 +27,17 @@ IF(APPLE)
   SET(SDL_LIBRARY_TEMP "${DEPS_PATH}/SDL2.framework")
   SET(SDL_TTF_LIBRARY "${DEPS_PATH}/SDL2_ttf.framework")
   SET(GTEST_ROOT "${DEPS_PATH}/gtest")
+ELSEIF(UNIX)
+  set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 ENDIF()
 
-FIND_PACKAGE(SDL REQUIRED)
-INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
-TARGET_LINK_LIBRARIES(small3d PUBLIC "${SDL_LIBRARY}")
+FIND_PACKAGE(SDL2 REQUIRED)
+INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIR})
+TARGET_LINK_LIBRARIES(small3d PUBLIC "${SDL2_LIBRARY}")
 
-FIND_PACKAGE(SDL_ttf REQUIRED)
-INCLUDE_DIRECTORIES(${SDL_TTF_INCLUDE_DIRS})
-TARGET_LINK_LIBRARIES(small3d PUBLIC "${SDL_TTF_LIBRARIES}")
+FIND_PACKAGE(SDL2_ttf REQUIRED)
+INCLUDE_DIRECTORIES(${SDL2_TTF_INCLUDE_DIRS})
+TARGET_LINK_LIBRARIES(small3d PUBLIC "${SDL2_TTF_LIBRARIES}")
 
 IF(APPLE)
   SET(GLEW_INCLUDE_DIR "${DEPS_PATH}/glew/include")
@@ -51,9 +53,9 @@ ADD_DEFINITIONS(${PNG_DEFINITIONS})
 TARGET_LINK_LIBRARIES(small3d PUBLIC "${PNG_LIBRARIES}")
 
 IF(NOT APPLE)
-  FIND_PACKAGE(GTEST REQUIRED)
-  INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
-  TARGET_LINK_LIBRARIES(${GTEST_LIBRARIES})
+  FIND_PACKAGE(GTest)
+  INCLUDE_DIRECTORIES(${GTest_INCLUDE_DIRS})
+#  TARGET_LINK_LIBRARIES(${GTest_LIBRARIES})
 ELSE()
   INCLUDE_DIRECTORIES("${DEPS_PATH}/googletest/include")
   TARGET_LINK_LIBRARIES(small3dTest PUBLIC "${DEPS_PATH}/googletest/libgtest.a")
@@ -62,7 +64,7 @@ ENDIF()
 IF(APPLE)
   INCLUDE_DIRECTORIES("${DEPS_PATH}/include")
 ELSE()
-  FIND_PACKAGE(GLM REQUIRED)
+  FIND_PACKAGE(GLM)
   INCLUDE_DIRECTORIES("${GLM_INCLUDE_DIRS}")
 ENDIF()
 
