Unit tests work on Debian now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,9 +53,9 @@ ADD_DEFINITIONS(${PNG_DEFINITIONS})
 TARGET_LINK_LIBRARIES(small3d PUBLIC "${PNG_LIBRARIES}")
 
 IF(NOT APPLE)
-  FIND_PACKAGE(GTest)
-  INCLUDE_DIRECTORIES(${GTest_INCLUDE_DIRS})
-#  TARGET_LINK_LIBRARIES(${GTest_LIBRARIES})
+  FIND_PACKAGE(GTest REQUIRED)
+  INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
+  TARGET_LINK_LIBRARIES(small3dTest PUBLIC ${GTEST_BOTH_LIBRARIES})
 ELSE()
   INCLUDE_DIRECTORIES("${DEPS_PATH}/googletest/include")
   TARGET_LINK_LIBRARIES(small3dTest PUBLIC "${DEPS_PATH}/googletest/libgtest.a")
