CMakeLists.txt optimisation and README update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,14 +21,12 @@ if(NOT WIN32 OR MINGW)
   ENDIF()
 endif()
 
-set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
 IF(APPLE)
   SET(DEPS_PATH "${CMAKE_SOURCE_DIR}/deps")
   SET(CMAKE_PREFIX_PATH ${DEPS_PATH})
-  SET(SDL_LIBRARY_TEMP "${DEPS_PATH}/SDL2.framework")
-  SET(SDL_TTF_LIBRARY "${DEPS_PATH}/SDL2_ttf.framework")
-  SET(GTEST_ROOT "${DEPS_PATH}/gtest")
+  SET(GLEW_LIBRARY "${DEPS_PATH}/lib/libGLEW.a")
 ENDIF()
 
 FIND_PACKAGE(SDL2 REQUIRED)
@@ -39,10 +37,6 @@ FIND_PACKAGE(SDL2_ttf REQUIRED)
 INCLUDE_DIRECTORIES(${SDL2_TTF_INCLUDE_DIRS})
 TARGET_LINK_LIBRARIES(small3d PUBLIC "${SDL2_TTF_LIBRARIES}")
 
-IF(APPLE)
-  SET(GLEW_INCLUDE_DIR "${DEPS_PATH}/glew/include")
-  SET(GLEW_LIBRARY "${DEPS_PATH}/glew/lib/libGLEW.a")
-ENDIF()
 FIND_PACKAGE(GLEW REQUIRED)
 INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIRS})
 TARGET_LINK_LIBRARIES(small3d PUBLIC "${GLEW_LIBRARIES}")
@@ -52,21 +46,12 @@ INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIRS})
 ADD_DEFINITIONS(${PNG_DEFINITIONS})
 TARGET_LINK_LIBRARIES(small3d PUBLIC "${PNG_LIBRARIES}")
 
-IF(NOT APPLE)
-  FIND_PACKAGE(GTest REQUIRED)
-  INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
-  TARGET_LINK_LIBRARIES(small3dTest PUBLIC ${GTEST_BOTH_LIBRARIES})
-ELSE()
-  INCLUDE_DIRECTORIES("${DEPS_PATH}/googletest/include")
-  TARGET_LINK_LIBRARIES(small3dTest PUBLIC "${DEPS_PATH}/googletest/libgtest.a")
-ENDIF()
+FIND_PACKAGE(GTest REQUIRED)
+INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
+TARGET_LINK_LIBRARIES(small3dTest PUBLIC ${GTEST_BOTH_LIBRARIES})
 
-IF(APPLE)
-  INCLUDE_DIRECTORIES("${DEPS_PATH}/include")
-ELSE()
-  FIND_PACKAGE(GLM)
-  INCLUDE_DIRECTORIES("${GLM_INCLUDE_DIRS}")
-ENDIF()
+FIND_PACKAGE(GLM)
+INCLUDE_DIRECTORIES("${GLM_INCLUDE_DIRS}")
 
 IF(WIN32 AND NOT MINGW)
   SET_TARGET_PROPERTIES(small3d PROPERTIES LINK_FLAGS "/NODEFAULTLIB:\"LIBCMTD\" /NODEFAULTLIB:\"LIBCMT\"")
