Successful compilation on Windows too.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,12 @@ ADD_LIBRARY(small3d BoundingBoxes.cpp BoundingBoxes.hpp Exception.cpp Exception.
 ADD_EXECUTABLE(small3dTest main.cpp)
 
 # Link OpenGL things and set to use C++11
+
+FIND_PACKAGE(OpenGL REQUIRED)
+INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
+TARGET_LINK_LIBRARIES(small3d PUBLIC ${OPENGL_LIBRARIES})
+
 if(NOT WIN32 OR MINGW)
-  FIND_PACKAGE(OpenGL REQUIRED)
-  INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
-  TARGET_LINK_LIBRARIES(small3d PUBLIC ${OPENGL_LIBRARIES})
   IF(APPLE)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
   ELSE()
@@ -23,10 +25,12 @@ endif()
 
 SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
-IF(APPLE)
+IF(APPLE OR WIN32)
   SET(DEPS_PATH "${CMAKE_SOURCE_DIR}/deps")
   SET(CMAKE_PREFIX_PATH ${DEPS_PATH})
-  SET(GLEW_LIBRARY "${DEPS_PATH}/lib/libGLEW.a")
+  IF(APPLE)
+    SET(GLEW_LIBRARY "${DEPS_PATH}/lib/libGLEW.a")
+  ENDIF()
 ENDIF()
 
 FIND_PACKAGE(SDL2 REQUIRED)
