First build with sound libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,10 @@ TARGET_LINK_LIBRARIES(small3dTest PUBLIC ${GTEST_BOTH_LIBRARIES})
 FIND_PACKAGE(GLM)
 INCLUDE_DIRECTORIES("${GLM_INCLUDE_DIRS}")
 
+FIND_PACKAGE(VORBIS REQUIRED)
+INCLUDE_DIRECTORIES(${VORBIS_INCLUDE_DIR})
+TARGET_LINK_LIBRARIES(small3d PUBLIC "${VORBIS_LIBRARIES}")
+
 IF(WIN32 AND NOT MINGW)
   SET_TARGET_PROPERTIES(small3d PROPERTIES LINK_FLAGS "/NODEFAULTLIB:\"LIBCMTD\" /NODEFAULTLIB:\"LIBCMT\"")
 ENDIF()
