Sound is working again on OSX.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,10 +50,6 @@ INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIRS})
 ADD_DEFINITIONS(${PNG_DEFINITIONS})
 TARGET_LINK_LIBRARIES(small3d PUBLIC "${PNG_LIBRARIES}")
 
-FIND_PACKAGE(PORTAUDIO REQUIRED)
-INCLUDE_DIRECTORIES(${PORTAUDIO_INCLUDE_DIRS})
-TARGET_LINK_LIBRARIES(small3d PUBLIC "${PORTAUDIO_LIBRARIES}")
-
 FIND_PACKAGE(GTest REQUIRED)
 INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
 TARGET_LINK_LIBRARIES(small3dTest PUBLIC ${GTEST_BOTH_LIBRARIES})
@@ -61,9 +57,24 @@ TARGET_LINK_LIBRARIES(small3dTest PUBLIC ${GTEST_BOTH_LIBRARIES})
 FIND_PACKAGE(GLM)
 INCLUDE_DIRECTORIES("${GLM_INCLUDE_DIRS}")
 
+FIND_PACKAGE(OGG REQUIRED)
+INCLUDE_DIRECTORIES(${OGG_INCLUDE_DIRS})
+TARGET_LINK_LIBRARIES(small3d PUBLIC "${OGG_LIBRARIES}")
+
 FIND_PACKAGE(VORBIS REQUIRED)
 INCLUDE_DIRECTORIES(${VORBIS_INCLUDE_DIR})
 TARGET_LINK_LIBRARIES(small3d PUBLIC "${VORBIS_LIBRARIES}")
+
+FIND_PACKAGE(PORTAUDIO REQUIRED)
+INCLUDE_DIRECTORIES(${PORTAUDIO_INCLUDE_DIRS})
+TARGET_LINK_LIBRARIES(small3d PUBLIC "${PORTAUDIO_LIBRARIES}")
+
+IF(APPLE)
+	FIND_LIBRARY(AUDIOUNIT_LIBRARY AudioUnit)
+	FIND_LIBRARY(AUDIOTOOLBOX_LIBRARY AudioToolbox)
+	FIND_LIBRARY(COREAUDIO_LIBRARY CoreAudio)
+	TARGET_LINK_LIBRARIES(small3d PUBLIC "${COREAUDIO_LIBRARY}" "${AUDIOUNIT_LIBRARY}" "${AUDIOTOOLBOX_LIBRARY}")
+ENDIF(APPLE)
 
 IF(WIN32 AND NOT MINGW)
   SET_TARGET_PROPERTIES(small3d PROPERTIES LINK_FLAGS "/NODEFAULTLIB:\"LIBCMTD\" /NODEFAULTLIB:\"LIBCMT\"")
