Now automatically copying the required Windows dlls to the directory of each built executable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,14 +28,20 @@ IF (WIN32)
   FILE(COPY "samplegame/resources" DESTINATION "./small3d/src/Debug")
   FILE(COPY "small3d/resources" DESTINATION "./samplegame/src/Debug")
   FILE(COPY "samplegame/resources" DESTINATION "./samplegame/src/Debug")
-  # FILE(COPY "small3d/resources" DESTINATION "./small3d/src/Release")
-  # FILE(COPY "samplegame/resources" DESTINATION "./small3d/src/Release")
-  # FILE(COPY "small3d/resources" DESTINATION "./samplegame/src/Release")
-  # FILE(COPY "samplegame/resources" DESTINATION "./samplegame/src/Release")
+  FILE(COPY "small3d/resources" DESTINATION "./small3d/src/Release")
+  FILE(COPY "samplegame/resources" DESTINATION "./small3d/src/Release")
+  FILE(COPY "small3d/resources" DESTINATION "./samplegame/src/Release")
+  FILE(COPY "samplegame/resources" DESTINATION "./samplegame/src/Release")
+  FILE(GLOB dlls "deps/lib/*.dll")
+  FOREACH(dll ${dlls})
+    FILE(COPY ${dll} DESTINATION "./small3d/src/Debug")
+    FILE(COPY ${dll} DESTINATION "./samplegame/src/Debug")
+    FILE(COPY ${dll} DESTINATION "./small3d/src/Release")
+    FILE(COPY ${dll} DESTINATION "./samplegame/src/Release")
+  ENDFOREACH()
 ELSE (WIN32)
   FILE(COPY "small3d/resources" DESTINATION "./small3d/src")
   FILE(COPY "samplegame/resources" DESTINATION "./small3d/src")
   FILE(COPY "small3d/resources" DESTINATION "./samplegame/src")
   FILE(COPY "samplegame/resources" DESTINATION "./samplegame/src")
 ENDIF (WIN32)
-
