Set compile options for Debian.

--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -10,3 +10,10 @@ FIND_PACKAGE(SMALL3D REQUIRED)
 INCLUDE_DIRECTORIES("${SMALL3D_INCLUDE_DIRS}")
 TARGET_LINK_LIBRARIES(test_small3d PUBLIC "${SMALL3D_LIBRARIES}")
 
+if(NOT WIN32 OR MINGW)
+  IF(APPLE)
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
+  ELSE()
+    target_compile_options(test_small3d PUBLIC "-std=c++11" "-Wl,--no-as-needed") # Ubuntu if gcc problems
+  ENDIF()
+endif()
