Setting up infrastrucutre for second game.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ IF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
   SUBDIRS(small3d)
   SET(CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/glminclude/")
 ELSE()
-  SUBDIRS(small3d samplegame)
+  SUBDIRS(small3d sampleGames)
   IF (APPLE OR WIN32)
     SET(DEPS_PATH "${CMAKE_SOURCE_DIR}/deps")
     SET(CMAKE_PREFIX_PATH ${DEPS_PATH})
@@ -17,7 +17,6 @@ ELSE()
 ENDIF()
 
 SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
-
 
 FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(SDL2 REQUIRED)
@@ -34,27 +33,32 @@ ENDIF()
 
 IF (WIN32)
   FILE(COPY "small3d/resources" DESTINATION "./small3d/src/Debug")
-  FILE(COPY "small3d/resources" DESTINATION "./samplegame/src/Debug")
+  FILE(COPY "small3d/resources" DESTINATION "./sampleGames/avoidTheBug/src/Debug")
+  FILE(COPY "small3d/resources" DESTINATION "./sampleGames/chaseTheGoat/src/Debug")
   FILE(COPY "small3d/resources" DESTINATION "./small3d/src/Release")
-  FILE(COPY "small3d/resources" DESTINATION "./samplegame/src/Release")
+  FILE(COPY "small3d/resources" DESTINATION "./sampleGames/avoidTheBug/src/Release")
+  FILE(COPY "small3d/resources" DESTINATION "./sampleGames/chaseTheGoat/src/Release")
   IF(NOT DEFINED BUILD_WITH_CONAN OR NOT BUILD_WITH_CONAN)
-    FILE(COPY "samplegame/resources" DESTINATION "./small3d/src/Debug")
-    FILE(COPY "samplegame/resources" DESTINATION "./samplegame/src/Debug")
-    FILE(COPY "samplegame/resources" DESTINATION "./small3d/src/Release")
-    FILE(COPY "samplegame/resources" DESTINATION "./samplegame/src/Release")
+    FILE(COPY "sampleGames/avoidTheBug/resources" DESTINATION "./sampleGames/avoidTheBug/src/Debug")
+    FILE(COPY "sampleGames/chaseTheGoat/resources" DESTINATION "./sampleGames/chaseTheGoat/src/Debug")
+    FILE(COPY "sampleGames/avoidTheBug/resources" DESTINATION "./sampleGames/avoidTheBug/src/Release")
+    FILE(COPY "sampleGames/chaseTheGoat/resources" DESTINATION "./sampleGames/chaseTheGoat/src/Release")
     FILE(GLOB dlls "deps/lib/*.dll")
     FOREACH(dll ${dlls})
       FILE(COPY ${dll} DESTINATION "./small3d/src/Debug")
-      FILE(COPY ${dll} DESTINATION "./samplegame/src/Debug")
+      FILE(COPY ${dll} DESTINATION "./sampleGames/avoidTheBug/src/Debug")
+      FILE(COPY ${dll} DESTINATION "./sampleGames/chaseTheGoat/src/Debug")
       FILE(COPY ${dll} DESTINATION "./small3d/src/Release")
-      FILE(COPY ${dll} DESTINATION "./samplegame/src/Release")
+      FILE(COPY ${dll} DESTINATION "./sampleGames/avoidTheBug/src/Release")
+      FILE(COPY ${dll} DESTINATION "./sampleGames/chaseTheGoat/src/Release")
     ENDFOREACH()
   ENDIF()
 ELSE (WIN32)
   FILE(COPY "small3d/resources" DESTINATION "./small3d/src")
-  FILE(COPY "small3d/resources" DESTINATION "./samplegame/src")
+  FILE(COPY "small3d/resources" DESTINATION "./sampleGames/avoidTheBug/src")
+  FILE(COPY "small3d/resources" DESTINATION "./sampleGames/chaseTheGoat/src")
   IF(NOT DEFINED BUILD_WITH_CONAN OR NOT BUILD_WITH_CONAN)
-    FILE(COPY "samplegame/resources" DESTINATION "./small3d/src")
-    FILE(COPY "samplegame/resources" DESTINATION "./samplegame/src")
+    FILE(COPY "sampleGames/avoidTheBug/resources" DESTINATION "./sampleGames/avoidTheBug/src")
+    FILE(COPY "sampleGames/chaseTheGoat/resources" DESTINATION "./sampleGames/chaseTheGoat/src")
   ENDIF()
 ENDIF (WIN32)
