Better separation between conan and independent build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ IF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
   INCLUDE(conanbuildinfo.cmake)
   CONAN_BASIC_SETUP()
   SUBDIRS(small3d)
-  SET(CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/glminclude/")
+  INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/glminclude/")
 ELSE()
   SUBDIRS(small3d sampleGames)
   IF (APPLE OR WIN32)
@@ -14,51 +14,47 @@ ELSE()
       SET(GLEW_LIBRARY "${DEPS_PATH}/lib/libGLEW.a")
     ENDIF ()
   ENDIF ()
-ENDIF()
 
-SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+  SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+  FIND_PACKAGE(OpenGL REQUIRED)
+  FIND_PACKAGE(SDL2 REQUIRED)
+  FIND_PACKAGE(SDL2_ttf REQUIRED)
+  FIND_PACKAGE(GLEW REQUIRED)
+  FIND_PACKAGE(PNG REQUIRED)
+  FIND_PACKAGE(GLM)
+  FIND_PACKAGE(OGG REQUIRED)
+  FIND_PACKAGE(VORBIS REQUIRED)
+  FIND_PACKAGE(PORTAUDIO REQUIRED)
 
-FIND_PACKAGE(OpenGL REQUIRED)
-FIND_PACKAGE(SDL2 REQUIRED)
-FIND_PACKAGE(SDL2_ttf REQUIRED)
-FIND_PACKAGE(GLEW REQUIRED)
-FIND_PACKAGE(PNG REQUIRED)
-FIND_PACKAGE(GLM)
-
-IF(NOT DEFINED BUILD_WITH_CONAN OR NOT BUILD_WITH_CONAN)
-    FIND_PACKAGE(OGG REQUIRED)
-    FIND_PACKAGE(VORBIS REQUIRED)
-    FIND_PACKAGE(PORTAUDIO REQUIRED)
+  FILE(COPY "sampleGames/avoidTheBug/resources" DESTINATION "./sampleGames/avoidTheBug/src/Debug")
+  FILE(COPY "sampleGames/chaseTheGoat/resources" DESTINATION "./sampleGames/chaseTheGoat/src/Debug")
+  FILE(COPY "sampleGames/avoidTheBug/resources" DESTINATION "./sampleGames/avoidTheBug/src/Release")
+  FILE(COPY "sampleGames/chaseTheGoat/resources" DESTINATION "./sampleGames/chaseTheGoat/src/Release")
+  FILE(GLOB dlls "deps/lib/*.dll")
+  FOREACH(dll ${dlls})
+    FILE(COPY ${dll} DESTINATION "./small3d/src/Debug")
+    FILE(COPY ${dll} DESTINATION "./sampleGames/avoidTheBug/src/Debug")
+    FILE(COPY ${dll} DESTINATION "./sampleGames/chaseTheGoat/src/Debug")
+    FILE(COPY ${dll} DESTINATION "./small3d/src/Release")
+    FILE(COPY ${dll} DESTINATION "./sampleGames/avoidTheBug/src/Release")
+    FILE(COPY ${dll} DESTINATION "./sampleGames/chaseTheGoat/src/Release")
+  ENDFOREACH()
+  IF(WIN32)
+    FILE(COPY "small3d/resources" DESTINATION "./sampleGames/avoidTheBug/src/Debug")
+    FILE(COPY "small3d/resources" DESTINATION "./sampleGames/chaseTheGoat/src/Debug")
+    FILE(COPY "small3d/resources" DESTINATION "./sampleGames/avoidTheBug/src/Release")
+    FILE(COPY "small3d/resources" DESTINATION "./sampleGames/chaseTheGoat/src/Release")
+  ELSE()
+    FILE(COPY "sampleGames/avoidTheBug/resources" DESTINATION "./sampleGames/avoidTheBug/src")
+    FILE(COPY "sampleGames/chaseTheGoat/resources" DESTINATION "./sampleGames/chaseTheGoat/src")
+    FILE(COPY "small3d/resources" DESTINATION "./sampleGames/avoidTheBug/src")
+    FILE(COPY "small3d/resources" DESTINATION "./sampleGames/chaseTheGoat/src")
+  ENDIF()
 ENDIF()
 
 IF (WIN32)
   FILE(COPY "small3d/resources" DESTINATION "./small3d/src/Debug")
-  FILE(COPY "small3d/resources" DESTINATION "./sampleGames/avoidTheBug/src/Debug")
-  FILE(COPY "small3d/resources" DESTINATION "./sampleGames/chaseTheGoat/src/Debug")
   FILE(COPY "small3d/resources" DESTINATION "./small3d/src/Release")
-  FILE(COPY "small3d/resources" DESTINATION "./sampleGames/avoidTheBug/src/Release")
-  FILE(COPY "small3d/resources" DESTINATION "./sampleGames/chaseTheGoat/src/Release")
-  IF(NOT DEFINED BUILD_WITH_CONAN OR NOT BUILD_WITH_CONAN)
-    FILE(COPY "sampleGames/avoidTheBug/resources" DESTINATION "./sampleGames/avoidTheBug/src/Debug")
-    FILE(COPY "sampleGames/chaseTheGoat/resources" DESTINATION "./sampleGames/chaseTheGoat/src/Debug")
-    FILE(COPY "sampleGames/avoidTheBug/resources" DESTINATION "./sampleGames/avoidTheBug/src/Release")
-    FILE(COPY "sampleGames/chaseTheGoat/resources" DESTINATION "./sampleGames/chaseTheGoat/src/Release")
-    FILE(GLOB dlls "deps/lib/*.dll")
-    FOREACH(dll ${dlls})
-      FILE(COPY ${dll} DESTINATION "./small3d/src/Debug")
-      FILE(COPY ${dll} DESTINATION "./sampleGames/avoidTheBug/src/Debug")
-      FILE(COPY ${dll} DESTINATION "./sampleGames/chaseTheGoat/src/Debug")
-      FILE(COPY ${dll} DESTINATION "./small3d/src/Release")
-      FILE(COPY ${dll} DESTINATION "./sampleGames/avoidTheBug/src/Release")
-      FILE(COPY ${dll} DESTINATION "./sampleGames/chaseTheGoat/src/Release")
-    ENDFOREACH()
-  ENDIF()
 ELSE (WIN32)
   FILE(COPY "small3d/resources" DESTINATION "./small3d/src")
-  FILE(COPY "small3d/resources" DESTINATION "./sampleGames/avoidTheBug/src")
-  FILE(COPY "small3d/resources" DESTINATION "./sampleGames/chaseTheGoat/src")
-  IF(NOT DEFINED BUILD_WITH_CONAN OR NOT BUILD_WITH_CONAN)
-    FILE(COPY "sampleGames/avoidTheBug/resources" DESTINATION "./sampleGames/avoidTheBug/src")
-    FILE(COPY "sampleGames/chaseTheGoat/resources" DESTINATION "./sampleGames/chaseTheGoat/src")
-  ENDIF()
 ENDIF (WIN32)
