Tidied up small3d cmakelists file.

--- a/small3d/src/CMakeLists.txt
+++ b/small3d/src/CMakeLists.txt
@@ -10,39 +10,17 @@ ELSE()
       ModelLoader.cpp Renderer.cpp SceneObject.cpp Text.cpp
       WavefrontLoader.cpp SoundData.cpp Sound.cpp)
 
-  INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
-  TARGET_LINK_LIBRARIES(small3d PUBLIC ${OPENGL_LIBRARIES})
-
-  INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIR})
-  TARGET_LINK_LIBRARIES(small3d PUBLIC "${SDL2_LIBRARY}")
-
-  INCLUDE_DIRECTORIES(${SDL2_TTF_INCLUDE_DIRS})
-  TARGET_LINK_LIBRARIES(small3d PUBLIC "${SDL2_TTF_LIBRARIES}")
-
-  INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIRS})
-  TARGET_LINK_LIBRARIES(small3d PUBLIC "${GLEW_LIBRARIES}")
-
-  INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIRS})
+  INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR} ${SDL2_INCLUDE_DIR} ${SDL2_TTF_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS}
+  	${PNG_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${OGG_INCLUDE_DIRS} ${VORBIS_INCLUDE_DIR} ${PORTAUDIO_INCLUDE_DIRS})
   ADD_DEFINITIONS(${PNG_DEFINITIONS})
-  TARGET_LINK_LIBRARIES(small3d PUBLIC "${PNG_LIBRARIES}")
-
-  INCLUDE_DIRECTORIES("${GLM_INCLUDE_DIRS}")
-
-
-  INCLUDE_DIRECTORIES(${OGG_INCLUDE_DIRS})
-  TARGET_LINK_LIBRARIES(small3d PUBLIC "${OGG_LIBRARIES}")
-
-  INCLUDE_DIRECTORIES(${VORBIS_INCLUDE_DIR})
-  TARGET_LINK_LIBRARIES(small3d PUBLIC "${VORBIS_LIBRARIES}")
-
-  INCLUDE_DIRECTORIES(${PORTAUDIO_INCLUDE_DIRS})
-  TARGET_LINK_LIBRARIES(small3d PUBLIC "${PORTAUDIO_LIBRARIES}")
+  TARGET_LINK_LIBRARIES(small3d PUBLIC ${OPENGL_LIBRARIES} ${SDL2_LIBRARY} ${SDL2_TTF_LIBRARIES}
+  	${GLEW_LIBRARIES} ${PNG_LIBRARIES} ${OGG_LIBRARIES} ${VORBIS_LIBRARIES} ${PORTAUDIO_LIBRARIES})
 
   IF(APPLE)
     FIND_LIBRARY(AUDIOUNIT_LIBRARY AudioUnit)
     FIND_LIBRARY(AUDIOTOOLBOX_LIBRARY AudioToolbox)
     FIND_LIBRARY(COREAUDIO_LIBRARY CoreAudio)
-    TARGET_LINK_LIBRARIES(small3d PUBLIC "${COREAUDIO_LIBRARY}" "${AUDIOUNIT_LIBRARY}" "${AUDIOTOOLBOX_LIBRARY}")
+    TARGET_LINK_LIBRARIES(small3d PUBLIC ${COREAUDIO_LIBRARY} ${AUDIOUNIT_LIBRARY} ${AUDIOTOOLBOX_LIBRARY})
   ENDIF(APPLE)
 
   ADD_EXECUTABLE(small3dTest main.cpp)
