Corrected linking issue with conan.io osx build.

--- a/small3d/src/CMakeLists.txt
+++ b/small3d/src/CMakeLists.txt
@@ -4,7 +4,7 @@ ADD_LIBRARY(small3d BoundingBoxes.cpp Exception.cpp GetTokens.cpp
       WavefrontLoader.cpp SoundData.cpp Sound.cpp)
 
 IF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
-  TARGET_LINK_LIBRARIES(small3d ${CONAN_LIBS})
+  TARGET_LINK_LIBRARIES(small3d PUBLIC ${CONAN_LIBS})
 ELSE()
   INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR} ${SDL2_INCLUDE_DIR} ${SDL2_TTF_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS}
   	${PNG_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${OGG_INCLUDE_DIRS} ${VORBIS_INCLUDE_DIR} ${PORTAUDIO_INCLUDE_DIRS})
