--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,11 @@ env:
     - CONAN_REFERENCE="small3d/1.0.4"
     - CONAN_USERNAME="coding3d"
     - CONAN_CHANNEL="stable"
-    - CONAN_TOTAL_PAGES=4
+    - CONAN_TOTAL_PAGES=5
     - CONAN_CURRENT_PAGE=1
 
   matrix:
+    - CONAN_GCC_VERSIONS=4.6 CONAN_USE_DOCKER=1
     - CONAN_GCC_VERSIONS=4.8 CONAN_USE_DOCKER=1
     - CONAN_GCC_VERSIONS=4.9 CONAN_USE_DOCKER=1 
     - CONAN_GCC_VERSIONS=5.2 CONAN_USE_DOCKER=1
