--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ services:
    - docker
 sudo: required
 language: python
+branches:
+	only:
+		- master
 env:
   global:
     - CONAN_REFERENCE="small3d/1.0.4"
