--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,9 +8,9 @@ environment:
     PYTHON_ARCH: "64"
 
     CONAN_UPLOAD: 1
-    CONAN_REFERENCE: "small3d/1.0.4"
+    CONAN_REFERENCE: "small3d/1.0.5"
     CONAN_USERNAME: "coding3d"
-    CONAN_CHANNEL: "stable"
+    CONAN_CHANNEL: "ci"
     CONAN_TOTAL_PAGES: 1
 
     matrix:
