--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ branches:
     - master
 env:
   global:
+    - CONAN_UPLOAD=1
     - CONAN_REFERENCE="small3d/1.0.5"
     - CONAN_USERNAME="coding3d"
     - CONAN_CHANNEL="stable"
