Reviewed comments and parameters.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2)
 PROJECT(small3d)
 IF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
-  INCLUDE(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+  INCLUDE(${CMAKE_SOURCE_DIR}/conanbuildinfo.cmake)
   CONAN_BASIC_SETUP()
   SUBDIRS(small3d)
   INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/glminclude/")
