Switching off uploads and enabling builds on the develop branch.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ language: python
 branches:
   only:
     - master
+	- develop
 env:
   global:
-    - CONAN_UPLOAD=1
     - CONAN_REFERENCE="small3d/1.0.5"
     - CONAN_USERNAME="coding3d"
-    - CONAN_CHANNEL="stable"
+    - CONAN_CHANNEL="ci"
     - CONAN_TOTAL_PAGES=1
     - CONAN_CURRENT_PAGE=1
 
