--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,13 +1,13 @@
 build: false
 branches:
   only:
-    - master	
+    - master
+	- develop	
 environment:
     PYTHON: "C:\\Python27-x64"
     PYTHON_VERSION: "2.7.11"
     PYTHON_ARCH: "64"
 
-    CONAN_UPLOAD: 1
     CONAN_REFERENCE: "small3d/1.0.5"
     CONAN_USERNAME: "coding3d"
     CONAN_CHANNEL: "ci"
