Upload new packages

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,7 @@ environment:
     PYTHON_VERSION: "2.7.11"
     PYTHON_ARCH: "64"
     
+    CONAN_UPLOAD: 1
     CONAN_REFERENCE: "small3d/1.0.5"
     CONAN_USERNAME: "coding3d"
     CONAN_CHANNEL: "ci"
