--- a/.travis.yml
+++ b/.travis.yml
@@ -11,22 +11,22 @@ env:
   global:
     - CONAN_REFERENCE="small3d/1.0.5"
     - CONAN_USERNAME="coding3d"
-    - CONAN_CHANNEL="ci"
+    - CONAN_CHANNEL="testing"
     - CONAN_TOTAL_PAGES=1
     - CONAN_CURRENT_PAGE=1
 
   matrix:
     - CONAN_GCC_VERSIONS=4.8 CONAN_USE_DOCKER=1
-    - CONAN_GCC_VERSIONS=4.9 CONAN_USE_DOCKER=1 
+    - CONAN_GCC_VERSIONS=4.9 CONAN_USE_DOCKER=1
     - CONAN_GCC_VERSIONS=5.2 CONAN_USE_DOCKER=1
     - CONAN_GCC_VERSIONS=5.3 CONAN_USE_DOCKER=1
 matrix:
    include:
-       - os: osx 
+       - os: osx
          osx_image: xcode7.3 # apple-clang 7.3
          language: generic
          env:
-       - os: osx 
+       - os: osx
          osx_image: xcode7.1 # apple-clang 7.0
          language: generic
          env:
@@ -34,7 +34,7 @@ matrix:
          osx_image: xcode6.4 # apple-clang 6.1
          language: generic
          env:
-       - os: osx 
+       - os: osx
          osx_image: xcode6.2 # apple-clang 6.0
          language: generic
          env:
