Using more of conan facilities

--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -3,14 +3,15 @@ cmake_minimum_required(VERSION 3.0.0)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
+set(CMAKE_C_FLAGS "${CONAN_C_FLAGS}")
+set(CMAKE_CXX_FLAGS "${CONAN_CXX_FLAGS}")
+set(CMAKE_SHARED_LINKER_FLAGS "${CONAN_SHARED_LINKER_FLAGS}")
+
 add_executable(test_small3d main.cpp)
 
 target_link_libraries(test_small3d ${CONAN_LIBS})
 
-if(NOT WIN32 OR MINGW)
-  IF(APPLE)
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
-  ELSE()
-    target_compile_options(test_small3d PUBLIC "-std=c++11" "-Wl,--no-as-needed") # Ubuntu if gcc problems
-  ENDIF()
-endif()
+SET_TARGET_PROPERTIES(test_small3d PROPERTIES LINK_FLAGS "${CONAN_EXE_LINKER_FLAGS}")
+
+
+#target_compile_options(test_small3d PUBLIC "-std=c++11" "-Wl,--no-as-needed") # Ubuntu if gcc problems
