--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,10 +11,13 @@ environment:
     CONAN_REFERENCE: "small3d/1.0.5"
     CONAN_USERNAME: "coding3d"
     CONAN_CHANNEL: "testing"
-    CONAN_TOTAL_PAGES: 1
+    CONAN_TOTAL_PAGES: 4
 
     matrix:
         - CONAN_CURRENT_PAGE: 1
+        - CONAN_CURRENT_PAGE: 2
+        - CONAN_CURRENT_PAGE: 3
+        - CONAN_CURRENT_PAGE: 4
 
 install:
   - set PATH=%PATH%;%PYTHON%/Scripts/
