No compile definitions?

--- a/small3d/src/CMakeLists.txt
+++ b/small3d/src/CMakeLists.txt
@@ -12,7 +12,7 @@ IF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
   set(CMAKE_CXX_FLAGS "${CONAN_CXX_FLAGS}")
   set(CMAKE_SHARED_LINKER_FLAGS "${CONAN_SHARED_LINKER_FLAGS}")
   TARGET_LINK_LIBRARIES(small3d PUBLIC ${CONAN_LIBS})
-  TARGET_COMPILE_DEFINITIONS(small3d PUBLIC "${CONAN_DEFINES}")
+  #TARGET_COMPILE_DEFINITIONS(small3d PUBLIC "${CONAN_DEFINES}")
 ELSE()
   INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR} ${SDL2_INCLUDE_DIR} ${SDL2_TTF_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS}
   	${PNG_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${OGG_INCLUDE_DIRS} ${VORBIS_INCLUDE_DIR} ${PORTAUDIO_INCLUDE_DIRS})
