--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,10 +8,11 @@ environment:
     PYTHON_VERSION: "2.7.11"
     PYTHON_ARCH: "64"
 
+    CONAN_UPLOAD: 1
     CONAN_REFERENCE: "small3d/1.0.5"
     CONAN_USERNAME: "coding3d"
     CONAN_CHANNEL: "testing"
-    CONAN_TOTAL_PAGES: 4
+    CONAN_TOTAL_PAGES: 2
 
     matrix:
         - CONAN_CURRENT_PAGE: 1
