New portaudio and vorbis corrections on Linux

--- a/small3d/src/CMakeLists.txt
+++ b/small3d/src/CMakeLists.txt
@@ -22,7 +22,9 @@ IF(APPLE)
       "-framework AudioUnit AudioToolbox CoreAudio")
 ELSEIF(WIN32 AND NOT MINGW)
   SET_TARGET_PROPERTIES(small3d PROPERTIES LINK_FLAGS
-      "/NODEFAULTLIB:\"LIBCMTD\" /NODEFAULTLIB:\"LIBCMT\"")
+    "/NODEFAULTLIB:\"LIBCMTD\" /NODEFAULTLIB:\"LIBCMT\"")
+ELSE()
+  TARGET_LINK_LIBRARIES(small3d PUBLIC "-ljack -lasound")
 ENDIF()
 
 IF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
