Removing SDL2_ttf (does not work yet)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ ELSE()
   SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
   FIND_PACKAGE(OpenGL REQUIRED)
   FIND_PACKAGE(SDL2 REQUIRED)
-  FIND_PACKAGE(SDL2_ttf REQUIRED)
+  FIND_PACKAGE(FREETYPE REQUIRED)
   FIND_PACKAGE(GLEW REQUIRED)
   FIND_PACKAGE(PNG REQUIRED)
   FIND_PACKAGE(GLM)
