--- a/small3d/src/CMakeLists.txt
+++ b/small3d/src/CMakeLists.txt
@@ -39,7 +39,7 @@ ELSE()
   INCLUDE_DIRECTORIES(
       ${OPENGL_INCLUDE_DIR}
       ${SDL2_INCLUDE_DIR}
-      ${SDL2_TTF_INCLUDE_DIRS}
+      ${FREETYPE_INCLUDE_DIRS}
       ${GLEW_INCLUDE_DIRS}
   	  ${PNG_INCLUDE_DIRS}
       ${GLM_INCLUDE_DIRS}
@@ -52,7 +52,7 @@ ELSE()
   TARGET_LINK_LIBRARIES(small3d PUBLIC
       ${OPENGL_LIBRARIES}
       ${SDL2_LIBRARY}
-      ${SDL2_TTF_LIBRARIES}
+      ${FREETYPE_LIBRARIES}
   	  ${GLEW_LIBRARIES}
       ${PNG_LIBRARIES}
       ${OGG_LIBRARIES}
