--- a/small3d/src/CMakeLists.txt
+++ b/small3d/src/CMakeLists.txt
@@ -1,11 +1,11 @@
 ADD_LIBRARY(small3d BoundingBoxSet.cpp Exception.cpp GetTokens.cpp
       Image.cpp Logger.cpp MathFunctions.cpp Model.cpp
       ModelLoader.cpp Renderer.cpp SceneObject.cpp
-      WavefrontLoader.cpp Sound.cpp ../include/small3d/BoundingBoxSet.hpp
+      WavefrontLoader.cpp SoundPlayer.cpp ../include/small3d/BoundingBoxSet.hpp
     ../include/small3d/Exception.hpp ../include/small3d/GetTokens.hpp ../include/small3d/Image.hpp
     ../include/small3d/Logger.hpp ../include/small3d/MathFunctions.hpp ../include/small3d/Model.hpp
     ../include/small3d/ModelLoader.hpp ../include/small3d/Renderer.hpp ../include/small3d/SceneObject.hpp
-    ../include/small3d/Sound.hpp ../include/small3d/SoundData.hpp ../include/small3d/WavefrontLoader.hpp)
+    ../include/small3d/SoundPlayer.hpp ../include/small3d/SoundData.hpp ../include/small3d/WavefrontLoader.hpp)
 
 TARGET_INCLUDE_DIRECTORIES(small3d PUBLIC "${small3d_SOURCE_DIR}/small3d/include/small3d")
 
